--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             </div>
         </div>
     </section>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5PdgIAHzwDvTZRjIGSQGtN?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     
     <footer class="bg-[#000000] pt-10 pb-10 opacity-90">
         <div class="container mx-auto my-auto">
