--- a/dafput.html
+++ b/dafput.html
@@ -15,7 +15,7 @@
     <title>Daftar Putar</title>
     <link href="dist/dafputout.css" rel="stylesheet">
 </head>
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen bg-zinc-50">
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
